# screensaver

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: building.h  charrender.h  main.h  random.h  star.h  text.h  winscreensaver.h
src/: building.cpp  charrender.cpp  main.cpp  random.cpp  star.cpp  text.cpp  winscreensaver.cpp
